--- a/index.html
+++ b/index.html
@@ -265,20 +265,16 @@
                         </button>
                     </div>
                     
-                    <!-- 消费记录 -->
+                    <!-- 生成记录 -->
                     <div class="transaction-history">
                         <div class="history-header">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
-                                <polyline points="14 2 14 8 20 8"/>
-                                <line x1="16" y1="13" x2="8" y2="13"/>
-                                <line x1="16" y1="17" x2="8" y2="17"/>
-                                <polyline points="10 9 9 9 8 9"/>
+                                <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/>
                             </svg>
-                            <h3>消费记录</h3>
+                            <h3>AI生成记录</h3>
                         </div>
                         <div id="transactionHistory" class="history-list">
-                            <!-- 交易记录将动态加载 -->
+                            <!-- 生成记录将动态加载 -->
                         </div>
                     </div>
                 </div>
