--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <meta name="twitter:image" content="https://yourdomain.com/icon/CascadeStudioBanner-1257x519.png">
         
         <!-- 移动端优化 -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
         <meta name="theme-color" content="#2c3e50">
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
