--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         </div>
 
         <!-- 主应用区域 -->
-        <div id="appbody" style="height:auto">
+        <div id="appbody">
             <link data-name="vs/editor/editor.main" rel="stylesheet" href="./node_modules/monaco-editor/min/vs/editor/editor.main.css">
             <script>var require = { paths: { 'vs': 'node_modules/monaco-editor/min/vs' } };</script>
             <script type="text/javascript" src="./node_modules/monaco-editor/min/vs/loader.js"></script>
