--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
     <head>
-        <title>AI 3D Studio - AI驱动的在线3D CAD建模工具 | 免费在线CAD设计</title>
+        <title>AI 3D Studio - AI驱动的在线3D CAD建模工具</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         
         <!-- 基本SEO -->
         <meta name="application-name" content="AI 3D Studio">
         <meta name="description" content="AI 3D Studio是一款强大的AI驱动在线3D CAD建模工具，支持自然语言生成3D模型、参数化设计、STEP/STL导出。基于OpenCascade.js，完全免费，无需安装，浏览器即可使用。">
-        <meta name="keywords" content="AI 3D建模,在线CAD,3D设计工具,参数化建模,OpenCAD,AI建模,3D打印,STEP导出,STL导出,免费CAD软件,在线3D设计,AI CAD,智能建模,OpenCascade">
+        <meta name="keywords" content="AI 3D建模,在线CAD,3D设计工具,参数化建模,OpenCAD,AI建模,3D打印,STEP导出,STL导出,CAD软件,在线3D设计,AI CAD,智能建模,OpenCascade">
         <meta name="author" content="AI 3D Studio">
         <meta name="robots" content="index, follow">
         <meta name="googlebot" content="index, follow">
@@ -16,7 +16,7 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://yourdomain.com/">
         <meta property="og:title" content="AI 3D Studio - AI驱动的在线3D CAD建模工具">
-        <meta property="og:description" content="使用自然语言创建3D模型，支持参数化设计、STEP/STL导出。完全免费的在线CAD工具，无需安装。">
+        <meta property="og:description" content="使用自然语言创建3D模型，支持参数化设计、STEP/STL导出。在线CAD工具，无需安装。">
         <meta property="og:image" content="https://yourdomain.com/icon/CascadeStudioBanner-1257x519.png">
         <meta property="og:site_name" content="AI 3D Studio">
         <meta property="og:locale" content="zh_CN">
@@ -25,7 +25,7 @@
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:url" content="https://yourdomain.com/">
         <meta name="twitter:title" content="AI 3D Studio - AI驱动的在线3D CAD建模工具">
-        <meta name="twitter:description" content="使用自然语言创建3D模型，支持参数化设计、STEP/STL导出。完全免费的在线CAD工具。">
+        <meta name="twitter:description" content="使用自然语言创建3D模型，支持参数化设计、STEP/STL导出。在线CAD工具。">
         <meta name="twitter:image" content="https://yourdomain.com/icon/CascadeStudioBanner-1257x519.png">
         
         <!-- 移动端优化 -->
@@ -73,8 +73,7 @@
             "参数化设计",
             "STEP/STL/OBJ导出",
             "在线3D预览",
-            "无需安装",
-            "完全免费"
+            "无需安装"
           ]
         }
         </script>
