--- a/index.html
+++ b/index.html
@@ -147,11 +147,7 @@
         <div id="topnav" class="topnav">
             <div class="nav-left">
                 <a href="#" class="logo">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M12 2L2 7l10 5 10-5-10-5z"/>
-                        <path d="M2 17l10 5 10-5"/>
-                        <path d="M2 12l10 5 10-5"/>
-                    </svg>
+                    <img src="./icon/Logo.png" alt="AI 3D Studio" class="logo-img">
                     <span>AI 3D Studio</span>
                 </a>
             </div>
