--- a/index.html
+++ b/index.html
@@ -147,8 +147,7 @@
         <div id="topnav" class="topnav">
             <div class="nav-left">
                 <a href="#" class="logo">
-                    <img src="./icon/Logo.png" alt="AI 3D Studio" class="logo-img">
-                    <span>AI 3D Studio</span>
+                    <span class="logo-text">AI 3D Studio</span>
                 </a>
             </div>
             
